# android-ninja-to-compdb

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  android_ninja_to_compdb.cpp  cmd_out.cpp  cmd_out.hpp
